<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_forus"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_large" />

    <LinearLayout
        android:layout_marginTop="@dimen/space"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="@dimen/space_x0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_leimu" />

        <LinearLayout
            android:layout_marginLeft="@dimen/space_x2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_x0.5"
                android:textStyle="bold"
                android:text="@string/forus_text01"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_xx_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_x0.5"
                android:text="@string/forus_text02"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_x0.5"
                android:text="@string/forus_text03"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_x0.5"
                android:text="@string/forus_text04"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_x0.5"
                android:text="@string/forus_text05"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_large" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>